# VNS.PowerBuddy

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: tariff_overrides.json  timeofuse_dump.json
src/powerbuddy/: __init__.py  config.py  database.py  main.py  models.py  repositories.py  schemas.py
src/powerbuddy/services/: inverter.py  planner.py  planning_sanity.py  planning_variants.py  pricing.py  scheduler.py  tariff.py  weather.py
